crates/murphy-plugin-macros/tests/ui/fail_derive_unsupported_type.rs
use murphy_plugin_macros::CopOptions;

#[derive(CopOptions)]
struct BadOptions {
    // f64 is not a supported option field type.
    ratio: f64,
}

fn main() {}
